Fix gov't site flag alignment for mobile

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -207,7 +207,7 @@ div#logo.usa-logo {
 	}
 }
 .usa-banner-header img {
-	margin-right: 9px;
+	width: 20px;
 }
 }
 
